--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.shafiul.alam.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.Controller">
    <children>
       <ListView fx:id="messages" layoutX="189.0" layoutY="45.0" prefHeight="200.0" prefWidth="200.0" />
       <Button fx:id="sendButton" layoutX="337.0" layoutY="276.0" mnemonicParsing="false" onAction="#sendMessage" text="Send" />
